--- a/sistemaSec/templates/includes/sidebar.html
+++ b/sistemaSec/templates/includes/sidebar.html
@@ -39,7 +39,6 @@
                             <li class=""><a href="/COMP_button.html" class=""><i class="feather icon-file-text"></i> Editais</a></li>
                         </ul>
                     </li>
-                    
                     <li data-username="Componentes que rodam sobre o programa Primeiro Emprego" class="nav-item pcoded-hasmenu">
                         <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-grid"></i></span><span class="pcoded-mtext">Primeiro Emprego</span></a>
                         <ul class="pcoded-submenu">
@@ -48,7 +47,51 @@
                             <li class=""><a href="/COMP_button.html" class=""><i class="feather icon-file-text"></i> Editais</a></li>
                         </ul>
                     </li>
-
+                    <li class="nav-item pcoded-menu-caption">
+                        <label>Entidades</label>
+                    </li>
+                    <li data-username="Componentes que rodam sobre o programa Mais Futuro" class="nav-item pcoded-hasmenu">
+                        <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-box"></i></span><span class="pcoded-mtext">Supervisores</span></a>
+                        <ul class="pcoded-submenu">
+                            <li class=""><a href="/COMP_button.html" class="">Supervisores</a></li>
+                        </ul>
+                    </li>
+                    
+                    <li data-username="Componentes que rodam sobre o programa Mais Futuro" class="nav-item pcoded-hasmenu">
+                        <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-box"></i></span><span class="pcoded-mtext">Sedes</span></a>
+                        <ul class="pcoded-submenu">
+                            <li class=""><a href="/COMP_button.html" class="">Sedes</a></li>
+                        </ul>
+                    </li>
+                    
+                    <li data-username="Componentes que rodam sobre o programa Mais Futuro" class="nav-item pcoded-hasmenu">
+                        <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-box"></i></span><span class="pcoded-mtext">NTEs</span></a>
+                        <ul class="pcoded-submenu">
+                            <li class=""><a href="/COMP_button.html" class="">NTE</a></li>
+                        </ul>
+                    </li>
+                    
+                    <li data-username="Componentes que rodam sobre o programa Mais Futuro" class="nav-item pcoded-hasmenu">
+                        <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-box"></i></span><span class="pcoded-mtext">Municipios</span></a>
+                        <ul class="pcoded-submenu">
+                            <li class=""><a href="/COMP_button.html" class="">Municipios</a></li>
+                        </ul>
+                    </li>
+                    
+                    <li data-username="Componentes que rodam sobre o programa Mais Futuro" class="nav-item pcoded-hasmenu">
+                        <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-box"></i></span><span class="pcoded-mtext">Cursos</span></a>
+                        <ul class="pcoded-submenu">
+                            <li class=""><a href="/COMP_button.html" class="">Cursos</a></li>
+                        </ul>
+                    </li>
+                
+                    <li data-username="Componentes que rodam sobre o programa Mais Futuro" class="nav-item pcoded-hasmenu">
+                        <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-box"></i></span><span class="pcoded-mtext">Faculdades</span></a>
+                        <ul class="pcoded-submenu">
+                            <li class=""><a href="/COMP_button.html" class="">Faculdades</a></li>
+                        </ul>
+                    </li>
+                    
                     <li class="nav-item pcoded-menu-caption">
                         <label>Forms & Tables</label>
                     </li>
