consegue fazer a consulta com mais de 1 parametro

--- a/sistemaSec/templates/home/PAES_dashboard.html
+++ b/sistemaSec/templates/home/PAES_dashboard.html
@@ -45,7 +45,11 @@
                                         <div class="form-group">
                                             <label for="nome">Consultar</label>
                                             <input type="text" class="form-control" name="buscar_estagiario_partiu_estagio" placeholder="Nome do Estagiario">
+                                            <input type="text" class="form-control" name="buscar_cpf_estagiario_partiu_estagio" placeholder="CPF do Estagiario">
+                                        
                                         </div>
+                                        
+                                            
                                         <button type="submit" class="btn btn-primary" style="margin-top: 10px; margin-left: 45%;">Consultar</button>
                                     </form>
 
