--- a/sistemaSec/templates/home/PAES_dashboard.html
+++ b/sistemaSec/templates/home/PAES_dashboard.html
@@ -45,10 +45,16 @@
                                         <div class="form-group">
                                             <label for="nome">Consultar</label>
                                             <input type="text" class="form-control" name="buscar_estagiario_partiu_estagio" placeholder="Nome do Estagiario">
-                                            <input type="text" class="form-control" name="buscar_cpf_estagiario_partiu_estagio" placeholder="CPF do Estagiario">
-                                        
                                         </div>
-                                        
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="buscar_cpf_estagiario_partiu_estagio" placeholder="CPF do Estagiario">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="buscar_situacao_estagiario_partiu_estagio" placeholder="Situacao do Estagiario">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="buscar_turno_estagiario_partiu_estagio" placeholder="Turno do Estagiario">
+                                        </div>
                                             
                                         <button type="submit" class="btn btn-primary" style="margin-top: 10px; margin-left: 45%;">Consultar</button>
                                     </form>
@@ -71,6 +77,7 @@
                                                         <td>{{ estagiario.cpf_estagiario }}</td>
                                                         <td>{{ estagiario.nome_estagiario }}</td>
                                                         <td>{{ estagiario.situacao_estagiario }}</td>
+                                                        <td>{{ estagiario.supervisor_estagiario }}</td>
                                                         <td><a href="{% url 'editar_estagiario_partiu_estagio' estagiario.cpf_estagiario %}" type="button" class="btn btn-success" style="margin-top: 10px; margin-left: 45%;">Editar</a></td>
                                                     </tr>
                                                     {% endfor %}
