Concluido CRUD do programa

--- a/sistemaSec/templates/includes/sidebar.html
+++ b/sistemaSec/templates/includes/sidebar.html
@@ -84,7 +84,14 @@
                             <li class=""><a href="{% url 'dashboard_curso' %}" class="">Cursos</a></li>
                         </ul>
                     </li>
-                
+
+                    <li data-username="Componentes que rodam sobre o programa Mais Futuro" class="nav-item pcoded-hasmenu">
+                        <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-box"></i></span><span class="pcoded-mtext">Programas</span></a>
+                        <ul class="pcoded-submenu">
+                            <li class=""><a href="{% url 'dashboard_programa' %}" class="">Programas</a></li>
+                        </ul>
+                    </li>
+
                     <li data-username="Componentes que rodam sobre o programa Mais Futuro" class="nav-item pcoded-hasmenu">
                         <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-box"></i></span><span class="pcoded-mtext">Faculdades</span></a>
                         <ul class="pcoded-submenu">
