--- a/sistemaSec/templates/includes/sidebar.html
+++ b/sistemaSec/templates/includes/sidebar.html
@@ -98,6 +98,13 @@
                             <li class=""><a href="{% url 'dashboard_faculdade' %}" class="">Faculdades</a></li>
                         </ul>
                     </li>
+
+                    <li data-username="Componentes que rodam sobre o programa Mais Futuro" class="nav-item pcoded-hasmenu">
+                        <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-box"></i></span><span class="pcoded-mtext">Editais</span></a>
+                        <ul class="pcoded-submenu">
+                            <li class=""><a href="{% url 'dashboard_edital' %}" class="">Editais</a></li>
+                        </ul>
+                    </li>
                     
                     <li class="nav-item pcoded-menu-caption">
                         <label>Forms & Tables</label>
