--- a/sistemaSec/templates/includes/sidebar.html
+++ b/sistemaSec/templates/includes/sidebar.html
@@ -74,7 +74,7 @@
                     <li data-username="Componentes que rodam sobre o programa Mais Futuro" class="nav-item pcoded-hasmenu">
                         <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-box"></i></span><span class="pcoded-mtext">Municipios</span></a>
                         <ul class="pcoded-submenu">
-                            <li class=""><a href="/COMP_button.html" class="">Municipios</a></li>
+                            <li class=""><a href="{% url 'dashboard_municipio' %}" class="">Municipios</a></li>
                         </ul>
                     </li>
                     
