Concluido CRUD do sede com FK

--- a/sistemaSec/templates/home/EDTL_dashboard.html
+++ b/sistemaSec/templates/home/EDTL_dashboard.html
@@ -60,7 +60,7 @@
                                                 <thead>
                                                     <tr>
                                                         <th>Codigo</th>
-                                                        <th>Quantidades</th>
+                                                        <th>Quantidades de Vagas</th>
                                                         <th>Programa</th>
                                                     </tr>
                                                 </thead>
