Concluido relacionamento ManyToMany supervisor_sede

--- a/sistemaSec/templates/home/SUPE_criar_supervisor.html
+++ b/sistemaSec/templates/home/SUPE_criar_supervisor.html
@@ -48,6 +48,9 @@
                                             
                                             <label>telefone</label>
                                             <input type="text" class="form-control" name="telefone" placeholder="telefone">
+
+                                            <label>Sede</label>
+                                            <input type="text" class="form-control" name="sede_supervisor" placeholder="Sede">
                                             
                                         </div>
                                         <div  class="form-group"></div>
