--- a/sistemaSec/templates/home/SUPE_editar_supervisor.html
+++ b/sistemaSec/templates/home/SUPE_editar_supervisor.html
@@ -52,6 +52,10 @@
                                             <label>telefone</label>
                                             <input type="text" class="form-control" name="telefone" placeholder="telefone" value="{{supervisor.telefone_supervisor}}">
                                             
+                                            {% for sd in sede %}
+                                            <label>Sede</label>
+                                            <input type="text" class="form-control" name="sede_supervisor" placeholder="Sede" value="{{sd}}">
+                                            {% endfor %}
                                         </div>
                                         <div  class="form-group"></div>
                                         <button type="submit" class="btn btn-primary">Atualizar</button>
