--- a/sistemaSec/templates/home/PAES_criar_estagiario.html
+++ b/sistemaSec/templates/home/PAES_criar_estagiario.html
@@ -92,7 +92,16 @@
                                             <input type="text" class="form-control" name="situaçao" placeholder="situação">
                                             
                                             <label>supervisor</label>
-                                            <input type="text" class="form-control" name="supervisor" placeholder="situação">
+                                            <input type="text" class="form-control" name="supervisor" placeholder="supervisor">
+
+                                            <label>Sede</label>
+                                            <input type="text" class="form-control" name="sede" placeholder="Sede">
+
+                                            <label>Faculdade</label>
+                                            <input type="text" class="form-control" name="faculdade" placeholder="Faculdade">
+
+                                            <label>Estagio</label>
+                                            <input type="text" class="form-control" name="estagio" placeholder="Estagio">
                                         
                                         </div>
                                         <div  class="form-group"></div>
