--- a/sistemaSec/templates/home/PAES_editar_estagiario.html
+++ b/sistemaSec/templates/home/PAES_editar_estagiario.html
@@ -93,7 +93,15 @@
                                             
                                             <label>supervisor</label>
                                             <input type="text" class="form-control" name="supervisor" placeholder="supervisor" value="{{estagiario.supervisor_estagiario}}">
-                                        
+                                            
+                                            <label>Sede</label>
+                                            <input type="text" class="form-control" name="sede" placeholder="Sede" value="{{estagiario.sede_estagiario}}">
+
+                                            <label>Faculdade</label>
+                                            <input type="text" class="form-control" name="faculdade" placeholder="Faculdade" value="{{estagiario.faculdade_estagiario}}">
+
+                                            <label>Estagio</label>
+                                            <input type="text" class="form-control" name="Estagio" placeholder="Estagio" value="{{estagiario.estagio_estagiario}}">
                                         </div>
                                         <div  class="form-group"></div>
                                         <button type="submit" class="btn btn-primary">Atualizar</button>
