--- a/sistemaSec/templates/home/PAES_dashboard.html
+++ b/sistemaSec/templates/home/PAES_dashboard.html
@@ -55,7 +55,18 @@
                                         <div class="form-group">
                                             <input type="text" class="form-control" name="buscar_turno_estagiario_partiu_estagio" placeholder="Turno do Estagiario">
                                         </div>
-                                            
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="buscar_bairro_estagiario_partiu_estagio" placeholder="Bairro do Estagiario">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="buscar_supervisor_estagiario_partiu_estagio" placeholder="Supervisor do Estagiario">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="buscar_sede_estagiario_partiu_estagio" placeholder="Sede do Estagiario">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="buscar_faculdade_estagiario_partiu_estagio" placeholder="Faculdade do Estagiario">
+                                        </div>
                                         <button type="submit" class="btn btn-primary" style="margin-top: 10px; margin-left: 45%;">Consultar</button>
                                     </form>
 
@@ -68,7 +79,11 @@
                                                         <th>CPF</th>
                                                         <th>Nome</th>
                                                         <th>Situaçao</th>
+                                                        <th>Turno</th>
+                                                        <th>Bairro</th>
                                                         <th>Supervisor</th>
+                                                        <th>Sede</th>
+                                                        <th>Faculdade</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -77,7 +92,11 @@
                                                         <td>{{ estagiario.cpf_estagiario }}</td>
                                                         <td>{{ estagiario.nome_estagiario }}</td>
                                                         <td>{{ estagiario.situacao_estagiario }}</td>
+                                                        <td>{{ estagiario.turno_estagiario }}</td>
+                                                        <td>{{ estagiario.bairro_estagiario }}</td>
                                                         <td>{{ estagiario.supervisor_estagiario }}</td>
+                                                        <td>{{ estagiario.sede_estagiario }}</td>
+                                                        <td>{{ estagiario.faculdade_estagiario }}</td>
                                                         <td><a href="{% url 'editar_estagiario_partiu_estagio' estagiario.cpf_estagiario %}" type="button" class="btn btn-success" style="margin-top: 10px; margin-left: 45%;">Editar</a></td>
                                                     </tr>
                                                     {% endfor %}
