--- a/sistemaSec/templates/home/PAES_buscar_estagiario.html
+++ b/sistemaSec/templates/home/PAES_buscar_estagiario.html
@@ -54,6 +54,18 @@
                                         <div class="form-group">
                                             <input type="text" class="form-control" name="buscar_turno_estagiario_partiu_estagio" placeholder="Turno do Estagiario">
                                         </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="buscar_bairro_estagiario_partiu_estagio" placeholder="Bairro do Estagiario">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="buscar_supervisor_estagiario_partiu_estagio" placeholder="Supervisor do Estagiario">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="buscar_sede_estagiario_partiu_estagio" placeholder="Sede do Estagiario">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="buscar_faculdade_estagiario_partiu_estagio" placeholder="Faculdade do Estagiario">
+                                        </div>
 
                                         <button type="submit" class="btn btn-primary" style="margin-top: 10px; margin-left: 45%;">Consultar</button>
                                     </form>
