--- a/sistemaSec/templates/home/PAES_criar_estagiario.html
+++ b/sistemaSec/templates/home/PAES_criar_estagiario.html
@@ -34,7 +34,7 @@
                         <div class="col-sm-12">
                             <div class="card">
                                 <div class="card-header">
-                                    <h5>Hello card</h5>
+                                    <h5>Cadastro</h5>
                                 </div>
                                 <div class="col-md-6">
                                     <form action="{% url 'criar_estagiario_partiu_estagio' %}" method="POST" enctype="multipart/form-data">
@@ -44,19 +44,35 @@
                                             <input type="text" class="form-control" name="nome_estagiario" placeholder="nome_estagiario">
                                             
                                             <label>CPF</label>
-                                            <input type="text" class="form-control" name="cpf" placeholder="CPF">
+                                            <input type="text" class="form-control mask-cpf" name="cpf" placeholder="CPF">
                                             
                                             <label>RG</label>
                                             <input type="text" class="form-control" name="rg" placeholder="rg">
                                             
                                             <label>Turno</label>
-                                            <input type="text" class="form-control" name="turno" placeholder="turno">
+                                            <select class="form-control" name="turno">
+                                                <option value="0">Selecione</option>
+                                                <option value="Masculino">Matutino</option>
+                                                <option value="Feminino">Vespertino</option>
+                                            </select>
                                             
                                             <label>Email</label>
                                             <input type="text" class="form-control" name="email" placeholder="email">
                                             
                                             <label>Semestre</label>
-                                            <input type="text" class="form-control" name="semestre" placeholder="semestre">
+                                            <select class="form-control" name="turno">
+                                                <option value="0">Selecione</option>
+                                                <option value="1">1</option>
+                                                <option value="2">2</option>
+                                                <option value="3">3</option>
+                                                <option value="4">4</option>
+                                                <option value="5">5</option>
+                                                <option value="6">6</option>
+                                                <option value="7">7</option>
+                                                <option value="8">8</option>
+                                                <option value="9">9</option>
+                                                <option value="10">10</option>
+                                            </select>
                                             
                                             <label>Nis</label>
                                             <input type="text" class="form-control" name="nis" placeholder="nis">
@@ -71,11 +87,22 @@
                                             <input type="text" class="form-control" name="nascimento" placeholder="nascimento">
                                             
                                             <label>genero</label>
-                                            <input type="text" class="form-control" name="genero" placeholder="genero">
-                                            
+                                            <select class="form-control" name="genero">
+                                                <option value="0">Selecione</option>
+                                                <option value="Masculino">Masculino</option>
+                                                <option value="Feminino">Feminino</option>
+                                            </select>
+                                           
                                             <label>raca</label>
-                                            <input type="text" class="form-control" name="raca" placeholder="raca">
-                                            
+                                            <select class="form-control" name="raca">
+                                                <option value="0">Selecione</option>
+                                                <option value="Branca">Branca</option>
+                                                <option value="Parda">Parda</option>
+                                                <option value="Preta">Preta</option>
+                                                <option value="Amarela">Amarela</option>
+                                                <option value="Indigena">Indigena</option>
+                                            </select>
+                                                                                        
                                             <label>bairro</label>
                                             <input type="text" class="form-control" name="bairro" placeholder="bairro">
                                             
@@ -88,10 +115,15 @@
                                             <label>Matricula</label>
                                             <input type="text" class="form-control" name="Matricula" placeholder="Matricula">
                                             
-                                            <label>situaçao</label>
-                                            <input type="text" class="form-control" name="situaçao" placeholder="situação">
+                                            <label>Situaçao</label>
+                                            <select class="form-control" name="situaçao">
+                                                <option value="0">Selecione</option>
+                                                <option value="Ativo">Ativo</option>
+                                                <option value="Desligado">Desligado</option>
+                                                <option value="Desclassificado">Desclassificado</option>
+                                            </select>
                                             
-                                            <label>supervisor</label>
+                                            <label>Supervisor</label>
                                             <input type="text" class="form-control" name="supervisor" placeholder="supervisor">
 
                                             <label>Sede</label>
@@ -120,6 +152,8 @@
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+    <script src="/static/assets/js/pages/mascara.js"></script>
+{% endblock javascripts %}
 
 
